# Local-Vision-AI

./: .gitignore  AUDIO_FEATURE_ARCHITECTURE.md  CLAUDE.md  PRD-LocalVisionAI.md  README.md  TRD-LocalVisionAI.md  pyproject.toml  requirements.txt  start_tunnel.bat  start_tunnel.sh
.github/workflows/: test.yml
cloudflare/: tunnel-config.yml
configs/: default.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: BackendBadge.tsx  Dashboard.tsx  Header.tsx  JobDetail.tsx  NewJobForm.tsx  ResultCard.tsx  Sidebar.tsx  StatusBadge.tsx  WebcamPreview.tsx
frontend/src/hooks/: useWebSocket.ts
localvisionai/: __init__.py  cli.py  config.py  exceptions.py  pipeline.py
localvisionai/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  lmstudio_adapter.py  ollama_adapter.py  openai_adapter.py  registry.py  transformers_adapter.py
localvisionai/analysis/: __init__.py  cache.py  pipeline.py
localvisionai/api/: __init__.py  server.py
localvisionai/audio/: __init__.py  base.py  ffmpeg_extractor.py  segmenter.py  transcriber.py
localvisionai/inputs/: __init__.py  audio_source.py  base.py  browser_source.py  file_source.py  webcam_source.py
localvisionai/outputs/: __init__.py  base.py  console_output.py  json_output.py  websocket_output.py
localvisionai/prompts/: __init__.py  builder.py  memory.py  templates.py
localvisionai/sampling/: __init__.py  adaptive_sampler.py  base.py  keyframe_sampler.py  scene_sampler.py  uniform_sampler.py
localvisionai/utils/: __init__.py  hardware.py  image.py  logging.py  timing.py
tests/fixtures/: mock_model_response.json
tests/unit/: test_adapters.py  test_outputs.py  test_pipeline.py  test_sampler.py
