[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localvisionai"
version = "0.1.0"
description = "Local AI-powered video understanding pipeline — privacy-first, model-agnostic."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["AI", "vision", "video", "local", "llm", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "av>=12.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
localvisionai = "localvisionai.cli:app"

[project.optional-dependencies]
ollama = ["ollama>=0.2"]
transformers = [
    "transformers>=4.40",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.2",
    "torch>=2.2",
]
llamacpp = ["llama-cpp-python>=0.2.70"]
mlx = ["mlx>=0.12", "mlx-vlm>=0.1"]
vllm = ["vllm>=0.4"]
screen = ["mss>=9.0"]
url = ["yt-dlp>=2024.1"]
scene = ["scenedetect>=0.6", "opencv-python>=4.8"]
webcam = ["opencv-python>=4.8"]
ocr = ["pytesseract>=0.3"]
whisper = ["openai-whisper>=20231117"]
rag = ["chromadb>=0.5", "sentence-transformers>=2.7"]
gradio = ["gradio>=4.0"]
web = ["aiohttp>=3.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
all = [
    "localvisionai[ollama,transformers,llamacpp,screen,url,scene,webcam,ocr,whisper,rag,gradio,web]"
]

[tool.hatch.build.targets.wheel]
packages = ["localvisionai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real models/hardware)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
